# Game-Tree-Algorithm-Project

GameTreeExplorer/: CMakeLists.txt  LICENSE.md  README.md
GameTreeExplorer/src/: main.cpp
GameTreeExplorer/src/objects/: Algo.cpp  Algo.h  GameBoard.h  GameManager.h  GameSate.h  MainMenu.h  Player.h  Stack.h  Token.h
